--- a/index.html
+++ b/index.html
@@ -41,17 +41,18 @@
                 </ul>
             </div>
         </header>
-
-        <div class="main_text">
-            <h2>
-                살 찌는 장내 환경을 바꾸는
-                <br>
-                신개념 다이어트 쉐이크
-            </h2>
-            <p>
-                [식욕조절 & 지방축적 억제]물질 함유
-            </p>
-        </div>
+        <figure class="bg_area">
+            <div class="main_text">
+                <h2>
+                    살 찌는 장내 환경을 바꾸는
+                    <br>
+                    신개념 다이어트 쉐이크
+                </h2>
+                <p>
+                    [식욕조절 & 지방축적 억제]물질 함유
+                </p>
+            </div>
+        </figure>
     </section>
 
     <section class="shack_list_section">
@@ -112,22 +113,22 @@
                     <li>
                         <img src="./img/research_top_02.png" alt="">
                     </li>
-                    <li>
+                    <li class="research_list_width">
                         <h2>다이어트 테크닉</h2>
                         <p>
                             미생물을 활용한 해피어트만의 독보적인 다이어트 테크닉을
                             <br>
                             지금 바로 만나보세요.
                         </p>
+                        <a href="#" class="more_btn">
+                            view more
+                        </a>
                     </li>
-                    <a href="#" class="more_btn">
-                        view more
-                    </a>
                 </ul>
             </div>
             <div class="research_bottom">
                 <ul class="research_list">
-                    <li>
+                    <li class="research_list_width">
                         <h2>해피어트 연구 노트</h2>
                         <p>
                             건강을 되찾은 수많은 사례와 우리 몸속에서 일어나는 변화를 연구하여
@@ -178,44 +179,46 @@
 
     <footer>
         <h2 class="logo_white">
+            <img src="./img/logo_white.png" alt="">
         </h2>
-        <div>
-            <h3>info</h3>
-            <p>
-                상호 : 조이라이프 코리아 대표 : 임선종 이메일 : joylifekoreaing@gmail.com
-                <br>
-                사업자등록번호 : 703-12-00174 [사업자정보확인] 통신판매업신고번호 : 제2018-충북청주-0486호
-                <br>
-                주소 : 충북 청주시 흥덕구 공단로 134 108호 개인정보보호책임자 : 임선종
-            </p>
-            <p>
-                Copyright ⓒ 2018. JoylifeKorea. All Rights Reserved.
-            </p>
-        </div>
-        <div>
-            <h3>Guide</h3>
-            <ul>
-                <li>이용약관</li>
-                <li>개인정보처리방침</li>
-                <li>자주묻는질문</li>
-            </ul>
-        </div>
-        <div>
-            <h3>
-                Contact us
-            </h3>
-            <div>
-                <p>플러스친구 @해피어트</p>
-                <p>※ 유선 상담은 진행하지 않습니다.</p>
+        <div class="footer_contant">
+            <div class="info">
+                <h3>info</h3>
+                <p>
+                    상호 : 조이라이프 코리아 대표 : 임선종 이메일 : joylifekoreaing@gmail.com
+                    <br>
+                    사업자등록번호 : 703-12-00174 [사업자정보확인] 통신판매업신고번호 : 제2018-충북청주-0486호
+                    <br>
+                    주소 : 충북 청주시 흥덕구 공단로 134 108호 개인정보보호책임자 : 임선종
+                </p>
+                <p>
+                    Copyright ⓒ 2018. JoylifeKorea. All Rights Reserved.
+                </p>
             </div>
-            <div>
-                <p>평일 10:00 - 17:00 (점심 12:00 - 13:00)</p>
-                <p>주말 및 공휴일 휴무</p>
+            <div class="guide">
+                <h3>Guide</h3>
+                <ul>
+                    <li>이용약관</li>
+                    <li>개인정보처리방침</li>
+                    <li>자주묻는질문</li>
+                </ul>
+            </div>
+            <div class="contact">
+                <h3>
+                    Contact us
+                </h3>
+                <div>
+                    <p class="plus_text">플러스친구 @해피어트</p>
+                    <p>※ 유선 상담은 진행하지 않습니다.</p>
+                </div>
+                <div>
+                    <p>평일 10:00 - 17:00 (점심 12:00 - 13:00)</p>
+                    <p>주말 및 공휴일 휴무</p>
+                </div>
             </div>
         </div>
     </footer>
-    <script src="./SCRIPT/script.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
-<link rel="stylesheet" href="./SCRIPT/script.js">
