--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/scroll.css">
 </head>
 
 <body>
@@ -57,7 +58,7 @@
 
     <section class="shack_list_section">
         <ul class="shack_list">
-            <li>
+            <li class="fade to_bottom content">
                 <img src="./img/shack_1.jpg" alt="쉐이크1">
                 <h2 class="shack_name">
                     해피어트 마이크로바이옴 쉐이크 곡물맛 3주 플랜 (1통)
@@ -68,7 +69,7 @@
                 </div>
                 <span class="shack_discount">7% off</span>
             </li>
-            <li>
+            <li class="fade to_bottom content delay">
                 <img src="./img/shack_2.jpg" alt="쉐이크2">
                 <h2 class="shack_name">
                     해피어트 마이크로바이옴 쉐이크 곡물맛 2개월 플랜 (3통)
@@ -79,7 +80,7 @@
                 </div>
                 <span class="shack_discount">16% off</span>
             </li>
-            <li>
+            <li class="fade to_bottom content delay">
                 <img src="./img/shack_3.jpg" alt="쉐이크3">
                 <h2 class="shack_name">
                     해피어트 마이크로바이옴 쉐이크 곡물맛 4개월 플랜 (5통)
@@ -107,13 +108,13 @@
         <div class="research_box">
             <div class="research_top">
                 <ul class="research_list">
-                    <li>
+                    <li class="fade to_bottom content">
                         <img src="./img/research_top_01.png" alt="">
                     </li>
-                    <li>
+                    <li class="fade to_bottom content delay">
                         <img src="./img/research_top_02.png" alt="">
                     </li>
-                    <li class="research_list_width">
+                    <li class="research_list_width fade to_bottom content delay">
                         <h2>다이어트 테크닉</h2>
                         <p>
                             미생물을 활용한 해피어트만의 독보적인 다이어트 테크닉을
@@ -128,7 +129,7 @@
             </div>
             <div class="research_bottom">
                 <ul class="research_list">
-                    <li class="research_list_width">
+                    <li class="research_list_width fade to_bottom content">
                         <h2>해피어트 연구 노트</h2>
                         <p>
                             건강을 되찾은 수많은 사례와 우리 몸속에서 일어나는 변화를 연구하여
@@ -139,10 +140,10 @@
                             view more
                         </a>
                     </li>
-                    <li>
+                    <li class="fade to_bottom content delay">
                         <img src="./img/research_bottom_01.png" alt="">
                     </li>
-                    <li>
+                    <li class="fade to_bottom content delay">
                         <img src="./img/research_bottom_02.png" alt="">
                     </li>
                 </ul>
@@ -164,15 +165,15 @@
     </div>
 
     <section class="diet_section">
-        <h2>Happier + Diet</h2>
-        <p>
+        <h2 class="fade to_bottom content">Happier + Diet</h2>
+        <p class="fade to_bottom content">
             해피어트는 단 한 가지,
             <br>
             쉽고 즐거운 다이어트를 돕기 위해 만들어진 브랜드입니다.
             <br>
             포기하지 않고 성공할 수 있는 방법을 제시합니다.
         </p>
-        <a href="#" class="more_btn white">
+        <a href="#" class="more_btn white fade to_bottom content">
             view more
         </a>
     </section>
